# grpc-hello-world

./: .gitignore  README.md  run_aarch64.sh  run_x86.sh
cmake/aarch64/: CMakeLists.txt
cmake/x86/: CMakeLists.txt
hello-world/: README.md
hello-world/server/src/: client.cpp  server.cc
proto/: inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  inference.proto
server/: CMakeLists.txt
server/proto/: hello.proto
server/src/: client.cpp  server.cc
src/: answer_to_everything.h  async_client.backup  client.cpp  client_async.cpp  frame_rate_logger.cpp  frame_rate_logger.h  server.cpp
